# kindle-scribe-drawing-tablet

./: .gitignore  README.md  deploy.sh  download-and-deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  build_gui.yml  seed-cache.yml
kindle/: Dockerfile  Dockerfile.fix  Makefile
kindle/gtk-ui/: meson.build  meson.options
kindle/gtk-ui/src/: main.cpp
kindle/kual/kindle-tablet/: config.xml  menu.json
kindle/tablet-daemon/: meson.build
kindle/tablet-daemon/src/: main.c
kindle_tablet/: config.py  connector.py  events.py  gui.py  input_macos.py  input_windows.py  main.py
kindle_tablet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
packaging/: README.md
packaging/macos/: build.sh  build_app.py  kindle_tablet.spec  launcher.py  make_icon.py
packaging/windows/: build.bat  kindle_tablet.spec  launcher.py  make_icon.py  version_info.txt
