[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-tablet"
version = "0.1.0"
description = "Use your jailbroken Kindle Scribe as a drawing tablet"
requires-python = ">=3.9"
dependencies = [
    "paramiko>=3.4",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
kindle-tablet = "kindle_tablet.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kindle_tablet*"]
